--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.444.0",
+    "moment": "^2.24.0",
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-native-aws3": "0.0.9"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
